# ecrous

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  shell.nix
.github/workflows/: release.yml
ecrous/: Cargo.toml
ecrous-cli/: Cargo.toml
ecrous-cli/src/: config.rs  main.rs
ecrous-database/: Cargo.toml
ecrous-macro/: Cargo.toml
ecrous-macro/src/: lib.rs
ecrous-serde/: Cargo.toml
ecrous-serde/src/: errors.rs  fields.rs  lib.rs  serializers.rs
playground/: Cargo.toml
playground/src/: main.rs  playground.example.rs
